# iced_jellyfin

./: Cargo.toml  build_api.bat  config.yml  jellyfin-openapi-stable.json
jellyfin_sdk/: Cargo.toml  README.md
jellyfin_sdk/.openapi-generator/: FILES
jellyfin_sdk/docs/: AccessSchedule.md  ActivityLogEntry.md  AddVirtualFolderDtoLibraryOptions.md  AdminNotificationDto.md  AlbumInfoRemoteSearchQuery.md  AllThemeMediaResultThemeVideosResult.md  ArtistInfoRemoteSearchQuery.md  ArtistsApi.md  AudioApi.md  AuthenticationInfo.md  AuthenticationResultSessionInfo.md  AuthenticationResultUser.md  BaseItem.md  BaseItemDto.md  BaseItemDtoCurrentProgram.md  BaseItemDtoImageBlurHashes.md  BaseItemPerson.md  BaseItemPersonImageBlurHashes.md  BookInfoRemoteSearchQuery.md  BoxSetInfoRemoteSearchQuery.md  BufferRequestDto.md  ChannelFeatures.md  ChannelsApi.md  ClientCapabilitiesDto.md  ClientCapabilitiesDtoDeviceProfile.md  CodecProfile.md  CollectionApi.md  CollectionCreationResult.md  ConfigurationApi.md  ConfigurationPageInfo.md  ContainerProfile.md  CreatePlaylistDto.md  DeviceInfo.md  DeviceProfileInfo.md  DevicesApi.md  DirectPlayProfile.md  DisplayPreferencesApi.md  DisplayPreferencesDto.md  DlnaApi.md  DynamicHlsApi.md  (+130 more)
jellyfin_sdk/src/apis/: activity_log_api.rs  api_key_api.rs  artists_api.rs  audio_api.rs  branding_api.rs  channels_api.rs  client_log_api.rs  collection_api.rs  configuration.rs  configuration_api.rs  dashboard_api.rs  devices_api.rs  display_preferences_api.rs  dlna_api.rs  dlna_server_api.rs  dynamic_hls_api.rs  environment_api.rs  filter_api.rs  mod.rs  (+44 more)
(+306 files in other folders)
